syntax = "proto3";

package product_service;

service ProductService {
  rpc GetProduct (GetProductRequest) returns (Product);
  rpc CreateProduct (CreateProductRequest) returns (Product);
  rpc UpdateProduct (UpdateProductRequest) returns (Product);
  rpc DeleteProduct (DeleteProductRequest) returns (Empty);
}

message Empty {}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  int32 stock = 5;
  string category = 6;
}

message GetProductRequest {
  string id = 1;
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
  string description = 3;
  int32 stock = 4;
  string category = 5;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  int32 stock = 5;
  string category = 6;
}

message DeleteProductRequest {
  string id = 1;
}