syntax = "proto3";

package cache_service;

service CacheService {
  rpc GetCache (GetRequest) returns (Product);
  rpc SetCache (SetRequest) returns (SetResponse);
  rpc InvalidateCache(InvalidateRequest) returns (InvalidateResponse);
}

message Product { 
  string id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  int32 stock = 5;
  string category = 6;
}

message GetRequest {
 string key = 1;
}

message GetResponse {
  Product value = 1;
}

message SetResponse {
  string message = 1;
}

message SetRequest {
  string key = 1;
  Product value = 2;
  int64 ttl_seconds = 3;
}

message InvalidateRequest {
 string key = 1;
}

message InvalidateResponse {
  string message = 1;
}